Fix IE8 some input that set min height is too high.

--- a/css/form-render.scss
+++ b/css/form-render.scss
@@ -362,6 +362,12 @@ body.ie8 {
 
 		}
 
+		input, select {
+			&[class*="span"] {
+				min-height: 20px;
+			}
+		}
+
 	}
 }
 
